--- a/components/portfolio/components/PageComponents/ContentItem.scss
+++ b/components/portfolio/components/PageComponents/ContentItem.scss
@@ -1,16 +1,20 @@
-@import './contentItemParagraph.scss';
+@import "./ContentItemParagraph.scss";
 
 .content__item {
   position: relative;
   top: 0;
+
   display: flex;
   overflow: hidden;
+  align-items: center;
+
   height: auto;
   margin: 0 auto;
   padding: 0;
+
   pointer-events: auto;
+
   color: #fff;
-  align-items: center;
 }
 
 .content__item p {
