--- a/components/portfolio/components/PageComponents/Footer.scss
+++ b/components/portfolio/components/PageComponents/Footer.scss
@@ -1,18 +1,22 @@
-@import './contentItemParagraph.scss';
+@import "./ContentItemParagraph.scss";
 
 .footer {
-  color: #7c7c7c;
-  text-align: center;
-  font-weight: 100;
   margin-top: 70px;
   margin-bottom: 50px;
+
+  text-align: center;
+
+  color: #7c7c7c;
+
   font-size: 13px;
+  font-weight: 100;
 }
 
 .footer > p {
   @extend .item-paragraph;
   > a {
     color: white;
+
     font-weight: bolder;
   }
 }
