--- a/components/portfolio/components/Slide/Slide.scss
+++ b/components/portfolio/components/Slide/Slide.scss
@@ -6,15 +6,20 @@
 .slide {
   position: absolute;
   top: 0;
+
   visibility: hidden;
+
   width: 100%;
+
   opacity: 0;
 }
 
 .slide--current {
   position: relative;
   z-index: 100;
+
   visibility: visible;
+
   opacity: 1;
 }
 
@@ -24,35 +29,45 @@
 }
 
 .slide__title {
+  width: 100%;
+  margin: 0 auto;
+  padding: 1em 0 0 0;
+
   cursor: pointer;
   cursor: hand;
   text-align: center;
+
   font-size: 1.75em;
   font-weight: normal;
-  margin: 0 auto;
-  padding: 1em 0 0 0;
 }
 
 // <pre> element is used since react wraps loose text in spans...causing the original styles to break
 .slide__title pre {
-  font-family: inherit;
-  white-space: inherit;
-  margin: inherit;
   display: inherit;
+
+  margin: inherit;
+
+  white-space: inherit;
+
+  font-family: inherit;
 }
 
 .slide__title span {
-  font-size: 55%;
-  font-weight: bold;
   display: block;
+
   letter-spacing: 2px;
   text-transform: uppercase;
+
   color: #35303d;
+
+  font-size: 55%;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 40em) {
   .slide {
     top: 25px;
+
     transform: scale(0.7);
   }
 }
