--- a/components/portfolio/index.scss
+++ b/components/portfolio/index.scss
@@ -31,11 +31,11 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow: hidden;
-}
+// html {
+//  overflow: hidden;
+// }
 
-body > div {
+#next {
   height: 100%;
 }
 
