--- a/components/portfolio/components/Header/Header.scss
+++ b/components/portfolio/components/Header/Header.scss
@@ -1,76 +1,94 @@
-@import '../../styles/core/helpers.scss';
-@import '../../styles/core/animate.scss';
-@import '../../styles/core/rubberBand.scss';
-@import '../../styles/core/bp-icon.scss';
+@import "../../styles/core/helpers.scss";
+@import "../../styles/core/animate.scss";
+@import "../../styles/core/rubberBand.scss";
+@import "../../styles/core/bp-icon.scss";
 
 /* Blueprint header */
 .bp-header {
-  @extend .cf;
-  width: 100%;
-  margin: 0 auto;
-  padding: 3em 3em 0;
+  z-index: 201; // position over slider to allow clicks/touch on icon with mobile devices
+
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  z-index: 201; // position over slider to allow clicks/touch on icon with mobile devices
+
+  width: 100%;
+  margin: 0 auto;
+  padding: 3em 2em 0;
+
+  @extend .cf;
 }
 
 .bp-header h1 {
+  margin: 0 0 0.6em 0;
+
   font-size: 2.125em;
   font-weight: 400;
   line-height: 1.3;
-  margin: 0 0 .6em 0;
 }
 
 .bp-header h1 > span {
-  font-size: 50%;
   display: block;
-  color: #4D4D5A;
+
+  color: #4d4d5a;
+
+  font-size: 50%;
 }
 
 .bp-header > span {
-  width: 100%;
-  font-weight: 700;
-  font-size: 0.85em;
-  color: #5C5EDC;
   position: relative;
   z-index: 100;
+
   display: block;
-  padding: 0 0 .6em .1em;
-  letter-spacing: .5em;
+
+  width: 100%;
+  padding: 0 0 0.6em 0.1em;
+
+  letter-spacing: 0.5em;
   text-transform: uppercase;
+
+  color: #5c5edc;
+
+  font-size: 0.85em;
+  font-weight: 700;
 }
 
 .bp-header > span span:after {
-  font-size: 50%;
-  font-size: 75%;
   position: relative;
   top: -8px;
   left: -12px;
+
   width: 30px;
   height: 30px;
+
   cursor: help;
+
+  font-size: 50%;
+  font-size: 75%;
 }
 
-.site-info-button:hover:before{
-  content: attr(data-content);
-  font-size: 110%;
-  font-weight: 700;
-  line-height: 1.2;
-  max-width: 500px;
+.site-info-button:hover:before {
   position: absolute;
   left: auto;
+
+  max-width: 500px;
   margin-left: 4px;
-  padding: .8em 1em;
+  padding: 0.8em 1em;
+
+  content: attr(data-content);
   text-align: left;
   text-indent: 0;
   letter-spacing: 0;
   text-transform: none;
+
   color: #fff;
-  background: #5C5EDC;
+  background: #5c5edc;
+
+  font-size: 110%;
+  font-weight: 700;
+  line-height: 1.2;
 }
 
 .site-info {
@@ -80,52 +98,77 @@
 .bp-header nav {
   position: relative;
   z-index: 100;
+
   margin: -2em 0 0 auto;
 }
 
 .bp-header nav a {
   position: relative;
+
   display: inline-block;
-  width: 2.5em;
-  height: 2.5em;
-  margin: 0 .1em;
+
+  margin: 0 0.5em;
+
+  transition: color 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
   text-align: left;
-  border-radius: 50%;
+}
+
+.site-nav-links {
+  margin-bottom: 1em;
+  a {
+    padding-bottom: 0.1em;
+
+    color: #cecece;
+    border-bottom: 0.025em solid #5c5edc;
+
+    line-height: 1em;
+  }
 }
 
 .bp-header nav a > span {
   display: none;
 }
 
-.bp-header nav a:hover:before {
-  content: attr(data-info);
-  color: #595A5F;
-  font-weight: bold;
-  font-size: 0.85em;
+.bp-header nav .bp-icon:hover:before {
   position: absolute;
-  top: 120%;
-  right: 0;
-  width: 600%;
+
+  content: attr(data-info);
   text-align: right;
   pointer-events: none;
+
+  color: #595a5f;
+
+  font-size: 0.85em;
+  font-weight: bold;
 }
 
-.bp-header nav a:hover {
-  background: #5C5EDC;
+.bp-header nav .bp-icon-child:hover:before {
+  right: -13px;
+  bottom: -20px;
+
+  width: 55px;
+}
+
+.bp-header nav .bp-icon-email:hover:before {
+  right: -3px;
+  bottom: -20px;
+
+  width: 42px;
 }
 
 .bp-header nav .bp-icon:after {
-  line-height: 2.4;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
+  margin: 0 0.5em;
+
+  transition: color 0.5s cubic-bezier(0.39, 0.575, 0.565, 1);
   text-indent: 0;
+
+  line-height: 2.4;
 }
 
 .bp-header nav a:hover:after {
-  color: #fff;
+  color: #cecece;
 }
 
 .bp-icon-child {
@@ -133,23 +176,23 @@
 }
 
 .bp-icon-child:after {
-  content: '\e811';
+  content: "\e811";
 }
 
 .bp-icon-about:after {
-  content: '\e808';
+  content: "\e808";
 }
 
 .bp-icon-twitter:after {
-  content: '\e800';
+  content: "\e800";
 }
 
 .bp-icon-email:after {
-  content: '\e801';
+  content: "\e801";
 }
 
 @media screen and (max-width: 50em) {
-  .site-info-button:hover:before{
+  .site-info-button:hover:before {
     display: none;
   }
 
@@ -165,19 +208,20 @@
   .bp-header > span {
     text-indent: 30px;
   }
-  .site-info-button:hover:before{
+  .site-info-button:hover:before {
     display: none;
   }
   .site-info {
     text-align: center;
   }
   .bp-header h1 {
-    font-size: 1.8em;
     width: 100%;
+
+    font-size: 1.8em;
   }
   .bp-header nav {
-    margin: 0;
     width: 100%;
+    margin: 0;
   }
 }
 
@@ -187,18 +231,20 @@
   }
   .bp-header > span {
     text-indent: 22px;
+    letter-spacing: 0.4em;
+
     font-size: 0.7em;
-    letter-spacing: .4em;
   }
   .bp-header > span span:hover:before {
     right: 0px;
   }
   .bp-header h1 {
-    font-size: 1.8em;
     width: 100%;
+
+    font-size: 1.8em;
   }
   .bp-header nav {
-    margin: 0;
     width: 100%;
+    margin: 0;
   }
 }
