--- a/components/portfolio/components/Portfolio/Portfolio.scss
+++ b/components/portfolio/components/Portfolio/Portfolio.scss
@@ -16,3 +16,22 @@
   height: 65%;
   min-height: 24em;
 }
+
+.showcase__title {
+  margin: 2em 1em 0;
+}
+
+.portfolio__body {
+  margin: 2em;
+}
+@media screen and (min-width: 40em) {
+  .portfolio__body {
+    margin: 5em;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .portfolio__body {
+    margin: 5em 10em;
+  }
+}
