--- a/components/portfolio/index.scss
+++ b/components/portfolio/index.scss
@@ -52,8 +52,6 @@ html {
   color: #cecece;
   background: #222125;
 
-  font-family: "Avenir", "Helvetica Neue", "Lato", "Segoe UI", Helvetica, Arial,
-    sans-serif;
   font-size: 100%;
 
   -webkit-font-smoothing: antialiased;
@@ -73,4 +71,9 @@ a:focus {
 
 a:hover {
   color: #fff;
+}
+
+* {
+  font-family: "Avenir", "Helvetica Neue", "Lato", "Segoe UI", Helvetica, Arial,
+    sans-serif;
 }
