--- a/components/portfolio/styles/settings.scss
+++ b/components/portfolio/styles/settings.scss
@@ -1,5 +1,5 @@
-
-$font-family: 'Avenir', 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+$font-family: "Avenir", "Helvetica Neue", "Lato", "Segoe UI", Helvetica, Arial,
+  sans-serif;
 
 $font-small: 12px;
 $font-medium: 16px;
@@ -8,8 +8,8 @@ $font-x-large: 28px;
 
 $black: #000;
 $color-white: #fff;
-$color-dodger-blue: #2196F3;
-$color-salem: #0F9D58;
+$color-dodger-blue: #2196f3;
+$color-salem: #0f9d58;
 $color-punch: #db4437;
 
 $global-radius: 4px;
@@ -17,11 +17,11 @@ $global-radius: 4px;
 // Color Scheme
 
 // Basic colors
-$primary: #6699FF; // light blue
-$secondary: #F5EDE3; // light tan
-$tertiary: #E1D4C0; // mid tan
+$primary: #6699ff; // light blue
+$secondary: #f5ede3; // light tan
+$tertiary: #e1d4c0; // mid tan
 $quadrant: #104386; // dark blue
-$fracture: #FF6600; // orange
+$fracture: #ff6600; // orange
 $black: #333333; // off black
 
 // Create a map for your theme
@@ -45,3 +45,5 @@ $theme: $stoic;
   $val: map-get($theme, $key);
   @return $val;
 }
+
+$cubic-bezier: cubic-bezier(0.39, 0.575, 0.565, 1);
