--- a/components/portfolio/components/Slide/Slide.scss
+++ b/components/portfolio/components/Slide/Slide.scss
@@ -58,7 +58,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
 
-  color: #35303d;
+  color: #3a3b8b;
 
   font-size: 55%;
   font-weight: bold;
