--- a/components/portfolio/components/Header/Header.scss
+++ b/components/portfolio/components/Header/Header.scss
@@ -25,17 +25,11 @@
 .bp-header h1 {
   margin: 0 0 0.6em 0;
 
+  color: #b3b5ff;
+
   font-size: 2.125em;
   font-weight: 400;
   line-height: 1.3;
-}
-
-.bp-header h1 > span {
-  display: block;
-
-  color: #4d4d5a;
-
-  font-size: 50%;
 }
 
 .bp-header > span {
@@ -84,7 +78,7 @@
   letter-spacing: 0;
   text-transform: none;
 
-  color: #fff;
+  color: #b3b5ff;
   background: #5c5edc;
 
   font-size: 110%;
@@ -110,6 +104,7 @@
 
   margin: 0 0.5em;
 
+  cursor: pointer;
   transition: color 0.5s $cubic-bezier;
   text-align: left;
 }
@@ -139,7 +134,7 @@
   text-align: right;
   pointer-events: none;
 
-  color: #595a5f;
+  color: #b3b5ff;
 
   font-size: 0.85em;
   font-weight: bold;
