--- a/components/portfolio/index.scss
+++ b/components/portfolio/index.scss
@@ -35,27 +35,15 @@
 //  overflow: hidden;
 // }
 
-#next {
-  height: 100%;
-}
-
-main {
-  height: 100%;
-}
-
 body,
-html {
+html,
+main,
+#__next {
   height: 100%;
   margin: 0;
   padding: 0;
 
-  color: #cecece;
-  background: #222125;
-
-  font-size: 100%;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: rgb(34, 33, 37);
 }
 
 a {
@@ -66,11 +54,11 @@ a {
 }
 
 a:focus {
-  color: #ddd;
+  color: #b3b5ff;
 }
 
 a:hover {
-  color: #fff;
+  color: #b3b5ff;
 }
 
 * {
