--- a/components/portfolio/styles/core/_button.scss
+++ b/components/portfolio/styles/core/_button.scss
@@ -1,14 +1,19 @@
 .button {
-  font-size: 1.31em;
   position: relative;
+
   display: inline-block;
   overflow: hidden;
+
   margin: 0 25px;
   padding: 0;
+
   cursor: pointer;
-  color: #5c5edc;
+
+  color: #b3b5ff;
   border: none;
   background: none;
+
+  font-size: 1.31em;
 }
 
 .button:focus {
@@ -16,5 +21,5 @@
 }
 
 .button:hover {
-  color: #fff;
+  color: #cecece;
 }
