--- a/components/portfolio/components/Slide/Slide.scss
+++ b/components/portfolio/components/Slide/Slide.scss
@@ -49,6 +49,8 @@
 
   white-space: inherit;
 
+  color: #b3b5ff;
+
   font-family: inherit;
 }
 
@@ -58,7 +60,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
 
-  color: #3a3b8b;
+  color: #5c5edc;
 
   font-size: 55%;
   font-weight: bold;
