--- a/components/portfolio/components/Portfolio/Portfolio.scss
+++ b/components/portfolio/components/Portfolio/Portfolio.scss
@@ -5,15 +5,41 @@
 **
 */
 .portfolio {
-  color: #b3b5ff;
   background: #222125;
-  background: linear-gradient(1deg, #5c5edc, #222125);
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
   font-size: 100%;
 
   @extend .container;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  &:before {
+    position: absolute;
+    z-index: 2;
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    content: "";
+
+    opacity: 0.5;
+    background-image: url("https://www.transparenttextures.com/patterns/broken-noise.png");
+  }
+  &:after {
+    position: absolute;
+    z-index: 1;
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    content: "";
+
+    background: linear-gradient(1deg, #5c5edc, #222125);
+  }
 }
 
 .inner__container {
@@ -30,6 +56,8 @@
 }
 
 .portfolio__body {
+  z-index: 3;
+
   margin: 2em;
 }
 @media screen and (min-width: 40em) {
