--- a/components/portfolio/index.scss
+++ b/components/portfolio/index.scss
@@ -31,10 +31,6 @@
   box-sizing: border-box;
 }
 
-// html {
-//  overflow: hidden;
-// }
-
 body,
 html,
 main,
@@ -43,7 +39,8 @@ main,
   margin: 0;
   padding: 0;
 
-  color: #28272b;
+  color: #2c2b2e;
+  background-color: #28272b;
 }
 
 a {
