--- a/components/portfolio/components/HeroIntro/HeroIntro.scss
+++ b/components/portfolio/components/HeroIntro/HeroIntro.scss
@@ -86,7 +86,7 @@
   color: #b3b5ff;
   border: none;
   border-radius: 0.08em;
-  background: #5c5edc;
+  background-color: #5c5edc;
 
   font-size: 1.4em;
 
