--- a/components/portfolio/components/Portfolio/Portfolio.scss
+++ b/components/portfolio/components/Portfolio/Portfolio.scss
@@ -14,7 +14,7 @@
   height: 100%;
 
   opacity: 0;
-  background: url("https://www.transparenttextures.com/patterns/broken-noise.png");
+  background: url("/static/broken-noise.png");
 }
 
 .portfolio {
