--- a/components/portfolio/components/Portfolio/Portfolio.scss
+++ b/components/portfolio/components/Portfolio/Portfolio.scss
@@ -4,6 +4,21 @@
 *** Intro Styles
 **
 */
+
+.quartz {
+  z-index: 2;
+
+  svg {
+    position: absolute;
+    top: 0px;
+    left: -5px;
+
+    width: 3em;
+
+    opacity: 0.85;
+  }
+}
+
 .portfolio-noise {
   position: absolute;
   z-index: 2;
@@ -67,9 +82,15 @@
 .portfolio__body {
   z-index: 3;
 
-  margin: 2em;
+  margin: 2em 2em 0;
 }
 @media screen and (min-width: 40em) {
+  .quartz {
+    svg {
+      width: 3em;
+    }
+  }
+
   .portfolio__body {
     margin: 5em;
   }
